# LethalCompanyModpackInstaller

./: .gitignore  CMakeLists.txt  EULA.txt  README.md  TOS.txt  appexceptions.cpp  appexceptions.h  downloader.cpp  downloader.h  installer.cpp  installer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  manager.cpp  manager.h  vcpkg.json  ziphandler.cpp  ziphandler.h
src/: appexceptions.h  downloader.cpp  downloader.h  installer.cpp  installer.h  logger.cpp  logger.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  manager.cpp  manager.h  userdatahandler.cpp  userdatahandler.h  ziphandler.cpp  ziphandler.h
src/stylesheets/: stylesheet.qss  stylesheet.vars
